fixed cv position and aligned elements

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,6 +50,7 @@ li a:hover {
 }
 
 #cvStyle {
-  display: block;
-  align-items: right;
+  height: 80vh;
+  width: 55%;
+  border: 1px solid #aca8a877;
 }
